// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pds posts views > embeds gallery with record. 1`] = `
{
  "author": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "labels": [
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-a",
      },
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-b",
      },
    ],
  },
  "bookmarkCount": 0,
  "cid": "cids(0)",
  "embed": {
    "$type": "app.bsky.embed.recordWithMedia#view",
    "media": {
      "$type": "app.bsky.embed.gallery#view",
      "items": [
        {
          "$type": "app.bsky.embed.gallery#viewImage",
          "alt": "landscape",
          "aspectRatio": {
            "height": 3,
            "width": 4,
          },
          "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(3)",
          "thumbnail": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(3)",
        },
      ],
    },
    "record": {
      "record": {
        "$type": "app.bsky.embed.record#viewRecord",
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "labels": [
            {
              "cid": "cids(2)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-a",
            },
            {
              "cid": "cids(2)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-b",
            },
          ],
        },
        "cid": "cids(4)",
        "embeds": [],
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "likeCount": 0,
        "quoteCount": 1,
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(2)",
        "value": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "embedded",
        },
      },
    },
  },
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": [],
  "likeCount": 0,
  "quoteCount": 0,
  "record": {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "embed": {
      "$type": "app.bsky.embed.recordWithMedia",
      "media": {
        "$type": "app.bsky.embed.gallery",
        "items": [
          {
            "$type": "app.bsky.embed.gallery#image",
            "alt": "landscape",
            "aspectRatio": {
              "height": 3,
              "width": 4,
            },
            "image": {
              "$type": "blob",
              "mimeType": "image/jpeg",
              "ref": {
                "$link": "cids(3)",
              },
              "size": 4114,
            },
          },
        ],
      },
      "record": {
        "record": {
          "cid": "cids(4)",
          "uri": "record(2)",
        },
      },
    },
    "text": "gallery + record",
  },
  "replyCount": 0,
  "repostCount": 0,
  "uri": "record(0)",
}
`;

exports[`pds posts views > embeds gallery. 1`] = `
{
  "author": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "labels": [
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-a",
      },
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-b",
      },
    ],
  },
  "bookmarkCount": 0,
  "cid": "cids(0)",
  "embed": {
    "$type": "app.bsky.embed.gallery#view",
    "items": [
      {
        "$type": "app.bsky.embed.gallery#viewImage",
        "alt": "landscape",
        "aspectRatio": {
          "height": 3,
          "width": 4,
        },
        "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(3)",
        "thumbnail": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(3)",
      },
      {
        "$type": "app.bsky.embed.gallery#viewImage",
        "alt": "portrait",
        "aspectRatio": {
          "height": 4,
          "width": 3,
        },
        "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(1)",
        "thumbnail": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(1)",
      },
    ],
  },
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": [],
  "likeCount": 0,
  "quoteCount": 0,
  "record": {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "embed": {
      "$type": "app.bsky.embed.gallery",
      "items": [
        {
          "$type": "app.bsky.embed.gallery#image",
          "alt": "landscape",
          "aspectRatio": {
            "height": 3,
            "width": 4,
          },
          "image": {
            "$type": "blob",
            "mimeType": "image/jpeg",
            "ref": {
              "$link": "cids(3)",
            },
            "size": 4114,
          },
        },
        {
          "$type": "app.bsky.embed.gallery#image",
          "alt": "portrait",
          "aspectRatio": {
            "height": 4,
            "width": 3,
          },
          "image": {
            "$type": "blob",
            "mimeType": "image/jpeg",
            "ref": {
              "$link": "cids(1)",
            },
            "size": 3976,
          },
        },
      ],
    },
    "text": "gallery",
  },
  "replyCount": 0,
  "repostCount": 0,
  "uri": "record(0)",
}
`;

exports[`pds posts views > embeds video with record. 1`] = `
{
  "author": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "labels": [
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-a",
      },
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-b",
      },
    ],
  },
  "bookmarkCount": 0,
  "cid": "cids(0)",
  "embed": {
    "$type": "app.bsky.embed.recordWithMedia#view",
    "media": {
      "$type": "app.bsky.embed.video#view",
      "alt": "alt text",
      "aspectRatio": {
        "height": 3,
        "width": 4,
      },
      "cid": "cids(3)",
      "playlist": "https://bsky.public.url/vid/user(1)/cids(3)/playlist.m3u8",
      "thumbnail": "https://bsky.public.url/vid/user(1)/cids(3)/thumbnail.jpg",
    },
    "record": {
      "record": {
        "$type": "app.bsky.embed.record#viewRecord",
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "labels": [
            {
              "cid": "cids(2)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-a",
            },
            {
              "cid": "cids(2)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-b",
            },
          ],
        },
        "cid": "cids(4)",
        "embeds": [],
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "likeCount": 0,
        "quoteCount": 1,
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(2)",
        "value": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "embedded",
        },
      },
    },
  },
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": [],
  "likeCount": 0,
  "quoteCount": 0,
  "record": {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "embed": {
      "$type": "app.bsky.embed.recordWithMedia",
      "media": {
        "$type": "app.bsky.embed.video",
        "alt": "alt text",
        "aspectRatio": {
          "height": 3,
          "width": 4,
        },
        "video": {
          "$type": "blob",
          "mimeType": "video/mp4",
          "ref": {
            "$link": "cids(3)",
          },
          "size": 13,
        },
      },
      "record": {
        "record": {
          "cid": "cids(4)",
          "uri": "record(2)",
        },
      },
    },
    "text": "video",
  },
  "replyCount": 0,
  "repostCount": 0,
  "uri": "record(0)",
}
`;

exports[`pds posts views > embeds video. 1`] = `
{
  "author": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "labels": [
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-a",
      },
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-b",
      },
    ],
  },
  "bookmarkCount": 0,
  "cid": "cids(0)",
  "embed": {
    "$type": "app.bsky.embed.video#view",
    "alt": "alt text",
    "aspectRatio": {
      "height": 3,
      "width": 4,
    },
    "cid": "cids(3)",
    "playlist": "https://bsky.public.url/vid/user(1)/cids(3)/playlist.m3u8",
    "thumbnail": "https://bsky.public.url/vid/user(1)/cids(3)/thumbnail.jpg",
  },
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": [],
  "likeCount": 0,
  "quoteCount": 0,
  "record": {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "embed": {
      "$type": "app.bsky.embed.video",
      "alt": "alt text",
      "aspectRatio": {
        "height": 3,
        "width": 4,
      },
      "video": {
        "$type": "blob",
        "mimeType": "video/mp4",
        "ref": {
          "$link": "cids(3)",
        },
        "size": 13,
      },
    },
    "text": "video",
  },
  "replyCount": 0,
  "repostCount": 0,
  "uri": "record(0)",
}
`;

exports[`pds posts views > fetches posts 1`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(1)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(1)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [
      {
        "cid": "cids(0)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(0)",
        "val": "self-label",
      },
    ],
    "likeCount": 0,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "labels": {
        "$type": "com.atproto.label.defs#selfLabels",
        "values": [
          {
            "val": "self-label",
          },
        ],
      },
      "text": "hey there",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(1)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(1)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 3,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(2)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 0,
    "quoteCount": 1,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "langs": [
        "en-US",
        "i-klingon",
      ],
      "text": "bob back at it again!",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(3)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(4)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(8)",
        "following": "record(7)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(5)",
    "embed": {
      "$type": "app.bsky.embed.recordWithMedia#view",
      "media": {
        "$type": "app.bsky.embed.images#view",
        "images": [
          {
            "alt": "../dev-env/assets/key-landscape-small.jpg",
            "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(5)/cids(6)",
            "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(5)/cids(6)",
          },
          {
            "alt": "../dev-env/assets/key-alt.jpg",
            "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(5)/cids(7)",
            "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(5)/cids(7)",
          },
        ],
      },
      "record": {
        "record": {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(2)",
            "displayName": "bobby",
            "handle": "bob.test",
            "labels": [],
            "viewer": {
              "blockedBy": false,
              "followedBy": "record(5)",
              "following": "record(4)",
              "muted": false,
            },
          },
          "cid": "cids(4)",
          "embeds": [],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [],
          "likeCount": 0,
          "quoteCount": 1,
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(3)",
          "value": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "langs": [
              "en-US",
              "i-klingon",
            ],
            "text": "bob back at it again!",
          },
        },
      },
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 2,
    "quoteCount": 1,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": {
        "$type": "app.bsky.embed.recordWithMedia",
        "media": {
          "$type": "app.bsky.embed.images",
          "images": [
            {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "image": {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": {
                  "$link": "cids(6)",
                },
                "size": 4114,
              },
            },
            {
              "alt": "../dev-env/assets/key-alt.jpg",
              "image": {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": {
                  "$link": "cids(7)",
                },
                "size": 12736,
              },
            },
          ],
        },
        "record": {
          "record": {
            "cid": "cids(4)",
            "uri": "record(3)",
          },
        },
      },
      "text": "hi im carol",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(6)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "like": "record(9)",
      "threadMuted": false,
    },
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
        "chat": {
          "allowIncoming": "none",
        },
      },
      "did": "user(6)",
      "handle": "dan.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "following": "record(11)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(8)",
    "embed": {
      "$type": "app.bsky.embed.record#view",
      "record": {
        "$type": "app.bsky.embed.record#viewRecord",
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "did": "user(4)",
          "handle": "carol.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "followedBy": "record(8)",
            "following": "record(7)",
            "muted": false,
          },
        },
        "cid": "cids(5)",
        "embeds": [
          {
            "$type": "app.bsky.embed.recordWithMedia#view",
            "media": {
              "$type": "app.bsky.embed.images#view",
              "images": [
                {
                  "alt": "../dev-env/assets/key-landscape-small.jpg",
                  "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(5)/cids(6)",
                  "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(5)/cids(6)",
                },
                {
                  "alt": "../dev-env/assets/key-alt.jpg",
                  "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(5)/cids(7)",
                  "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(5)/cids(7)",
                },
              ],
            },
            "record": {
              "record": {
                "$type": "app.bsky.embed.record#viewRecord",
                "author": {
                  "associated": {
                    "activitySubscription": {
                      "allowSubscriptions": "followers",
                    },
                  },
                  "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)",
                  "createdAt": "1970-01-01T00:00:00.000Z",
                  "did": "user(2)",
                  "displayName": "bobby",
                  "handle": "bob.test",
                  "labels": [],
                  "viewer": {
                    "blockedBy": false,
                    "followedBy": "record(5)",
                    "following": "record(4)",
                    "muted": false,
                  },
                },
                "cid": "cids(4)",
                "indexedAt": "1970-01-01T00:00:00.000Z",
                "labels": [],
                "likeCount": 0,
                "quoteCount": 1,
                "replyCount": 0,
                "repostCount": 0,
                "uri": "record(3)",
                "value": {
                  "$type": "app.bsky.feed.post",
                  "createdAt": "1970-01-01T00:00:00.000Z",
                  "langs": [
                    "en-US",
                    "i-klingon",
                  ],
                  "text": "bob back at it again!",
                },
              },
            },
          },
        ],
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "likeCount": 2,
        "quoteCount": 1,
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(6)",
        "value": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": {
            "$type": "app.bsky.embed.recordWithMedia",
            "media": {
              "$type": "app.bsky.embed.images",
              "images": [
                {
                  "alt": "../dev-env/assets/key-landscape-small.jpg",
                  "image": {
                    "$type": "blob",
                    "mimeType": "image/jpeg",
                    "ref": {
                      "$link": "cids(6)",
                    },
                    "size": 4114,
                  },
                },
                {
                  "alt": "../dev-env/assets/key-alt.jpg",
                  "image": {
                    "$type": "blob",
                    "mimeType": "image/jpeg",
                    "ref": {
                      "$link": "cids(7)",
                    },
                    "size": 12736,
                  },
                },
              ],
            },
            "record": {
              "record": {
                "cid": "cids(4)",
                "uri": "record(3)",
              },
            },
          },
          "text": "hi im carol",
        },
      },
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 0,
    "quoteCount": 1,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": {
        "$type": "app.bsky.embed.record",
        "record": {
          "cid": "cids(5)",
          "uri": "record(6)",
        },
      },
      "facets": [
        {
          "features": [
            {
              "$type": "app.bsky.richtext.facet#mention",
              "did": "user(0)",
            },
          ],
          "index": {
            "byteEnd": 18,
            "byteStart": 0,
          },
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "replyCount": 0,
    "repostCount": 1,
    "uri": "record(10)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(1)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(1)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 0,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(10)",
          "uri": "record(13)",
        },
        "root": {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 1,
    "uri": "record(12)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
]
`;
